--- a/app/Module/Admin/Presenters/templates/Category/show.latte
+++ b/app/Module/Admin/Presenters/templates/Category/show.latte
@@ -2,12 +2,12 @@
 {* Ta podminka by tu nemela byt, ale DashboardPresenter nezna ty promenny a hazi chyby. Chci to resit beforeRender
 {ifset $category}*}
 <p>
-<ul class="list-group list-group-horizontal">
-    <li class="list-group-item border border-0" n:foreach="$subcategories as $cat">
-        <a n:href="Category:subcategory, 'category_seotitle' => $category->category_seotitle, 'subcategory_seotitle' => $cat->subcategory_seotitle">{$cat->subcategory_title}</a>
 
-    </li>
-</ul>
+    {foreach $subcategories as $cat}
+         <a n:href="Category:subcategory, 'category_seotitle' => $category->category_seotitle, 'subcategory_seotitle' => $cat->subcategory_seotitle">{$cat->subcategory_title}</a> |
+
+    {/foreach}
+
 </p>
 <h1 n:block="category_title">{$category->category_title}</h1>
 
@@ -17,7 +17,7 @@ D
 
 <div class="album py-5 bg-body-tertiary">
 
-    <div class="container-fluid border border-danger">
+    <div class="container-fluid ">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-3  d-flex justify-content-center">
             {* Cyklus čtení z databáze a výpisu *}
             <div n:foreach="$posts as $post" class="  card shadow-sm  box">
@@ -32,14 +32,14 @@ D
                         </span>
                     </div>
                 </header>
-                <main class="box-body   border-secondary">
+                <main class="box-body ">
 
                     <h2 class="fs-5 mt-0 mb-0 pb-0 "><a href="/recipe/{$post->id}-{$post->seotitle}"
                                                         class="link-underline link-underline-opacity-0">{$post->title}</a>
                     </h2>
 
                 </main>
-                <footer class="box-foot d-flex align-items-end      border-secondary-subtle">
+                <footer class="box-foot d-flex align-items-end  ">
 
                     <p>
 
