--- a/www/assets/css/styles.css
+++ b/www/assets/css/styles.css
@@ -7,12 +7,15 @@
 
 }
 .box-head{
-    padding: 0;
+    padding: 0.5rem 1rem 0 0.5rem;
 }
 .box-body{
-    padding: 1rem;
+    padding: 0.5rem 1rem 0 0.5rem;
 
 }
 .box-foot{
-    padding: 0rem 1rem 0 1rem;
+    padding-top: 0.5rem;
+    padding-right: 1rem;
+    padding-left: 0.5rem;
+    padding-bottom: 0;
 }
