--- a/app/Module/Admin/Presenters/templates/@layout.latte
+++ b/app/Module/Admin/Presenters/templates/@layout.latte
@@ -6,9 +6,9 @@
 	<meta name="robots" content="noindex, nofollow">
 	<meta name="description" content="{if $context === 'category' && isset($category->description)}{$category->description|stripHtml}{elseif $context === 'subcategory' && isset($subcategory->description)}{$subcategory->description|stripHtml}{elseif $context === 'post' && isset($post->meta_description)}{$post->meta_description|stripHtml}{else}Welcome to our Cooking Guide - explore delicious recipes and cooking tips! {/if}"/>
 	{* Podminky pro zobrazeni dynamickych titulku. Pomohl Chatgpt*}
-	<title>{if $context === 'category' && isset($category->category_title)}{$category->category_title|stripHtml} Recipes{elseif $context === 'subcategory' && isset($subcategory->subcategory_title)}{$subcategory->subcategory_title|stripHtml} Recipes{elseif $context === 'post' && isset($post->title)}{$post->title|stripHtml} | Recipe {else} Online Recipes{/if}</title>
+	<title>{if $context === 'category' && isset($category->category_title)}{$category->category_title|stripHtml} Recipes{elseif $context === 'subcategory' && isset($subcategory->subcategory_title)}{$subcategory->subcategory_title|stripHtml} Recipes{elseif $context === 'post' && isset($post->title)}{$post->title|stripHtml} | Recipe {else} Cooking Guide | Recipes reviews & rating{/if}</title>
 
-
+	<link rel="canonical" href="{$canonicalUrl}">
 	<link rel="stylesheet" href="{$basePath}/assets/css/styles.css">
 	<link rel="stylesheet" href="{$basePath}/assets/css/color-modes.css">
 	<link rel="stylesheet" href="{$basePath}/assets/bootstrap-5.3.3-dist/css/bootstrap.min.css">
