--- a/app/Module/Admin/Presenters/templates/Homepage/default.latte
+++ b/app/Module/Admin/Presenters/templates/Homepage/default.latte
@@ -3,7 +3,7 @@
 {if $user->isLoggedIn()}
     <a n:href="Dashboard:create">Write new post</a>
 {/if}
-<p>New Kočky's Cook Book</p>
+<p>Kočky's Cook Book</p>
 
 <div class="album py-5 bg-body-tertiary">
 
