--- a/app/Module/Admin/Presenters/templates/Post/show.latte
+++ b/app/Module/Admin/Presenters/templates/Post/show.latte
@@ -93,7 +93,7 @@
 
 
 
-        <h2 class="pt-5">Questions & Replies</h2>
+        <h2 class="pt-5">Reviews & Rating</h2>
     {* Pokud je již formulář definován v presenteru, můžeme ho vykreslit (zobrazit) v šabloně.
        To uděláme umístěním značky {control} na konec šablony, která vykresluje jeden konkrétní příspěvek, do Post/show.latte.
        Protože se komponenta jmenuje commentForm (název je odvozen od názvu metody createComponentCommentForm), značka bude vypadat takto:
@@ -107,11 +107,11 @@
 
 
     {foreach $comments as $comment}
-        <p><b><a href="mailto:{$comment->email}" n:tag-if="$comment->email">
+            <p class="mb-0">  <b><a href="mailto:{$comment->email}" n:tag-if="$comment->email">
                     {$comment->name}
                 </a></b>:</p>
-
-        <div>{$comment->content}</div>
+       <small> {$comment->created_at|date:'F j, Y'}</small>
+            <p> {$comment->content}</p>
     {/foreach}
     </div> {* end col *}
  </div> {* end row *}
