--- a/app/Module/Admin/Presenters/templates/Homepage/default.latte
+++ b/app/Module/Admin/Presenters/templates/Homepage/default.latte
@@ -10,10 +10,11 @@
     <div class="container-fluid">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-3  d-flex justify-content-center">
             {* Cyklus čtení z databáze a výpisu *}
-            <div n:foreach="$posts as $post" class="col">
+            <div n:foreach="$articles as $post" class="col">
 
                 <div class="card shadow-sm  box">
                     <header class="box-head p-0 m-0">
+
                         <img
                                 {*V oknech šířky 768 pixelů a více se obrázek vykresluje do plochy o šířce 300 pixelů ((min-width: 768px) 300px).
                                   Ve všech ostatních velikostech okna, tedy do 767 pixelů, zabere 100 procent šířky okna (100vw).
@@ -23,19 +24,42 @@
                                      {$post->image_path|replace:".webp","-800w.webp"} 800w,
                                      {$post->image_path|replace:".webp","-1000w.webp"} 1000w"
                             sizes="(min-width: 768px) 300px, 80vw"
-                            width="100%" height="100%" alt="{$post->title}"
-                            class="rounded-top card-img-top bd-placeholder-img object-fit-contain"
+                            width="200" height="200" alt="{$post->title}"
+                            class="img-fluid rounded-top card-img-top bd-placeholder-img object-fit-contain"
                                 {* Pro první prvek z výpisu použijeme loading eager, zbytek lazy.*}
                                 n:attr="'loading' => $iterator->first ? 'eager' : 'lazy'">
+
                     </header>
                     <main class="box-body">
                     <span class="text-end">
                          {!isset($subcategoryTitles[$post->subcategory_seotitle]) ? 'No Subcategory' : $subcategoryTitles[$post->subcategory_seotitle]}
                     </span>
-                        <h2 class="fs-5 mt-0 mb-0 pb-0"><a href="/recipe/{$post->id}-{$post->seotitle}"
+                        <h2 class="fs-5 mt-0 mb-0 pb-2"><a href="/recipe/{$post->id}-{$post->seotitle}"
                                                             class="link-underline link-underline-opacity-0">{$post->title}</a>
                         </h2>
 
+                        {if isset($ratingsByPost[$post->id]['average']) && isset($ratingsByPost[$post->id]['sum'])}
+                        <div class="average d-inline-flex gap-3">
+
+                            <svg style="display:none;">
+                                <defs>
+                                    <symbol id="fivestars">
+                                        <path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279-7.416-3.967-7.417 3.967 1.481-8.279-6.064-5.828 8.332-1.151z M0 0 h24 v24 h-24 v-24" fill="white" fill-rule="evenodd"/>
+                                        <path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279-7.416-3.967-7.417 3.967 1.481-8.279-6.064-5.828 8.332-1.151z M0 0 h24 v24 h-24 v-24" fill="white" fill-rule="evenodd" transform="translate(24)"/>
+                                        <path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279-7.416-3.967-7.417 3.967 1.481-8.279-6.064-5.828 8.332-1.151z M0 0 h24 v24 h-24 v-24" fill="white" fill-rule="evenodd" transform="translate(48)"/>
+                                        <path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279-7.416-3.967-7.417 3.967 1.481-8.279-6.064-5.828 8.332-1.151z M0 0 h24 v24 h-24 v-24" fill="white" fill-rule="evenodd" transform="translate(72)"/>
+                                        <path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279-7.416-3.967-7.417 3.967 1.481-8.279-6.064-5.828 8.332-1.151z M0 0 h24 v24 h-24 v-24" fill="white" fill-rule="evenodd"  transform="translate(96)"/>
+                                    </symbol>
+                                </defs>
+                            </svg>
+                            <div class="ratings">
+                                <!--   <div class="rating-bg" style="width: 90%;"></div> -->
+                                <progress class="ratings-bg" value="{$ratingsByPost[$post->id]['average']}" max="5"></progress>
+                                <svg><use xlink:href="#fivestars"/></svg>
+                            </div>
+                            <span><b>{$ratingsByPost[$post->id]['average']}/5</b>  </b>|</b> {($ratingsByPost[$post->id]['count'])} Reviews</span>
+                        </div>
+                        {/if}
                     </main>
                     <footer class="box-foot d-flex align-items-end">
 
@@ -44,24 +68,22 @@
 
                         <div class="d-flex justify-content-between align-items-center">
                             <p>
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="purple"
-                                     class="bi bi-heart" viewBox="0 0 16 16">
-                                    <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
-                                </svg>
-
-                                <small class="text-body-secondary">
-                                    {$randomNumber = rand(1, 300)}x   <!-- Vytvoření proměnné s náhodným číslem -->
-                                </small>
 
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                      class="bi bi-clock" viewBox="0 0 16 16">
                                     <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71z"/>
                                     <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16m7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0"/>
                                 </svg>
-
+                                <small class="text-body-secondary">
+                                    {$post->prep_time+$post->cook_time} mins</small>,
 
                                 <small class="text-body-secondary">
-                                    {$post->prep_time+$post->cook_time} mins</small>
+                                    {ifset $caloriesData[$post->id]}
+                                     {$caloriesData[$post->id]} kcal
+                                    {/ifset}
+                                </small>
+
+
                             </p>
 
                         </div>
@@ -104,9 +126,33 @@
 
 
                       *}</div>
-            </div>
+            </div> {* end foreach cyklus*}
         </div>{* end row cols*}
+
+
     </div> {* end  container*}
+    <div class="row justify-content-center">
+ <div class="col-4">
+
+    <div class="pagination justify-content-center fs-5 bg-body">
+        {if !$paginator->isFirst()}
+            <a n:href="default, 1">First</a>
+            &nbsp;|&nbsp;
+            <a n:href="default, $paginator->page-1">Back</a>
+            &nbsp;|&nbsp;
+        {/if}
+
+            Page {$paginator->getPage()} z {$paginator->getPageCount()}
+
+	{if !$paginator->isLast()}
+            &nbsp;|&nbsp;
+            <a n:href="default, $paginator->getPage() + 1">Next</a>
+            &nbsp;|&nbsp;
+            <a n:href="default, $paginator->getPageCount()">Last</a>
+        {/if}
+    </div>
+    </div>
+    </div>{* end row pagination*}
 </div>
 
 {* Verze bez n:atrbutů
