--- a/app/Module/Admin/Presenters/templates/Post/show.latte
+++ b/app/Module/Admin/Presenters/templates/Post/show.latte
@@ -7,23 +7,33 @@
     <h1 class="pt-2" n:block="title">{$post->title_longer}</h1>
     <p>
 
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-             class="bi bi-clock" viewBox="0 0 16 16">
-            <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71z"/>
-            <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16m7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0"/>
-        </svg>
-        {$post->prep_time+$post->cook_time} &nbsp; min
-
-
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart"
-             viewBox="0 0 16 16">
-            <path fill="currentColor"
-                  d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
-        </svg>
-        {$randomNumber = rand(1, 300)} &nbsp; {$post->created_at|date:'F j, Y'}
+        Added by<strong> {$post->username}</strong>, {$post->created_at|date:'F j, Y'}
         <!-- Vytvoření proměnné s náhodným číslem -->
-        {if $user->isLoggedIn()}
+        {if $user->isLoggedIn() && $user->isInRole('admin')}
             <a n:href="Dashboard:edit $post->id"> (Edit post)</a>
+        {/if}
+
+         {if isset($averageRating) && isset($totalRatings)}
+        <div class="average d-inline-flex gap-3">
+
+            <svg style="display:none;">
+                <defs>
+                    <symbol id="fivestars">
+                        <path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279-7.416-3.967-7.417 3.967 1.481-8.279-6.064-5.828 8.332-1.151z M0 0 h24 v24 h-24 v-24" fill="white" fill-rule="evenodd"/>
+                        <path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279-7.416-3.967-7.417 3.967 1.481-8.279-6.064-5.828 8.332-1.151z M0 0 h24 v24 h-24 v-24" fill="white" fill-rule="evenodd" transform="translate(24)"/>
+                        <path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279-7.416-3.967-7.417 3.967 1.481-8.279-6.064-5.828 8.332-1.151z M0 0 h24 v24 h-24 v-24" fill="white" fill-rule="evenodd" transform="translate(48)"/>
+                        <path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279-7.416-3.967-7.417 3.967 1.481-8.279-6.064-5.828 8.332-1.151z M0 0 h24 v24 h-24 v-24" fill="white" fill-rule="evenodd" transform="translate(72)"/>
+                        <path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279-7.416-3.967-7.417 3.967 1.481-8.279-6.064-5.828 8.332-1.151z M0 0 h24 v24 h-24 v-24" fill="white" fill-rule="evenodd"  transform="translate(96)"/>
+                    </symbol>
+                </defs>
+            </svg>
+            <div class="ratings">
+                <!--   <div class="rating-bg" style="width: 90%;"></div> -->
+                <progress class="ratings-bg" value="{$averageRating}" max="5"></progress>
+                <svg><use xlink:href="#fivestars"/></svg>
+            </div>
+            <span><b>{$averageRating}</b>  Rating </b>|</b> <b>{$totalRatings}</b> Reviews</span>
+        </div>
         {/if}
     </p>
     <p>{$post->content}</p>
@@ -36,10 +46,9 @@
                                      {$post->image_path|replace:".webp","-800w.webp"} 800w,
                                      {$post->image_path|replace:".webp","-1000w.webp"} 1000w"
             sizes="
-    (min-width: 768px) 300px,
-    100vw"
-            width="auto" height="auto" alt="{$post->title}"
-            class="rounded-top card-img-top bd-placeholder-img object-fit-contain"
+    (min-width: 768px) 300px, 80vw"
+            width="200" height="200"  alt="{$post->title}"
+            class="img-fluid rounded-top card-img-top bd-placeholder-img object-fit-contain"
                 {* Pro první prvek z výpisu použijeme loading eager, zbytek lazy.*}
                                >
     <div class="row p-1">
@@ -49,18 +58,21 @@
         <div class="col text-center"><span class="fw-bold">Servings: </span> <p>{$post->servings}</p></div>
 
     </div>
-    <h2>Ingrediens</h2>
+
+        {$post->recipe_post|noescape}
+<h2 class="mt-2">Recipe:</h2>
+    <h3 class="mt-2">Ingrediens</h3>
     <ul class="list-group">
         {foreach explode("\n", $post->ingredients) as $ingredient}
-            <li class="list-group-item border border-0">{$ingredient}</li>
+            <li class="list-group-item border border-0 p-1 mb-0">{$ingredient|noescape}</li>
         {/foreach}
     </ul>
-    <h2>Directions</h2>
+    <h3 class="mt-3">Directions</h3>
     <ol class="list-group list-group-numbered">
         {var $step = 1} <!-- Počáteční hodnota počítadla kroků -->
         {foreach explode("\n", $post->instructions) as $instruction}
 
-            <li class="list-group-item d-flex justify-content-between align-items-start  border border-0 p-0 mb-0">
+            <li class="list-group-item d-flex justify-content-between align-items-start  border border-0 p-1 mb-0">
                 <div class="ms-2 me-auto">
                 {$instruction|noescape}
                 </div>
@@ -69,7 +81,7 @@
         {/foreach}
     </ol>
 
-    <h2>Nutrition Facts</h2>
+    <h3 class="mt-3">Nutrition Facts</h3>
     <div class="row">
         {foreach explode("\n", $post->nutrition_facts) as $nutrition_fact}
             <div class="col text-center">{$nutrition_fact}</div>
@@ -81,12 +93,12 @@
            použij jeho hodnotu. Pokud je null, použij jako výchozí hodnotu prázdný řetězec ('')."
            != '' je podmínka, která se ptá: "Je hodnota na levé straně nerovna prázdnému řetězci?" *}
         {if $post->tips_and_tricks ?? '' != ''}
-            <h2>Tips and Tricks</h2>
+            <h3 class="mt-3">Tips and Tricks</h3>
             {$post->tips_and_tricks}
         {/if}
 
         {if $post->recipe_history ?? '' != ''}
-            <h2>Historical & Cultural Overview</h2>
+            <h3 class="mt-3">Historical & Cultural Overview</h3>
             {$post->recipe_history}
         {/if}
 
@@ -98,8 +110,58 @@
        To uděláme umístěním značky {control} na konec šablony, která vykresluje jeden konkrétní příspěvek, do Post/show.latte.
        Protože se komponenta jmenuje commentForm (název je odvozen od názvu metody createComponentCommentForm), značka bude vypadat takto:
     *}
-    {*{control commentForm}*}
-    {include "../@form.latte", name: commentForm}
+    {*{control commentForm}
+    {include "../@form.latte", name: commentForm|noescape}*}
+
+
+    {*hodnotici formular co zapisuje do db*}
+                    <div class="pt-2 mb-0 pb-2">
+                <form n:name="commentForm" class="form-group">
+                    <div class="rating form-check">
+                        {foreach $form['ratio']->getItems() as $key => $label}
+
+                                <input n:name="ratio:$key" class="form-check-input " id="{$label}-{$post->id}">
+                                <label n:name="ratio:$key" class="form-check-label" for="{$label}-{$post->id}">
+
+                                        <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                             <path d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z"
+                                                  pathLength="360">
+                                            </path>
+                                        </svg>
+
+                                </label>
+
+                        {/foreach}
+                    </div>
+                        <div class="mb-3 row">
+                            <div class="col-sm-3 col-form-label"><label for="frm-commentForm-email">Name:</label></div>
+                            <div class="col-sm-9">
+                            <input n:name="name" class="form-control" placeholder="Your Name">
+                            </div>
+                        </div>
+                        <div class="mb-3 row">
+                            <div class="col-sm-3 col-form-label"><label for="frm-commentForm-email">Email:</label></div>
+                            <div class="col-sm-9">
+                                <input n:name="email" class="form-control" placeholder="Your Email">
+                            </div>
+                        </div>
+                        <div class="mb-3 row">
+                            <div class="col-sm-3 col-form-label"><label for="frm-commentForm-email">Message:</label></div>
+                            <div class="col-sm-9">
+                            <textarea n:name="content" class="form-control" placeholder="Your Message"></textarea>
+                            </div>
+                        </div>
+
+                        <div class="mb-3 row">
+                            <div class="col-sm-3 col-form-label"></div>
+                            <div class="col-sm-9">
+                        <button n:name="send" class="btn btn-primary">Send</button>
+                            </div>
+                    </div>
+
+                </form>
+
+                    </div>
     {* Všimněte si speciálního atributu n:tag-if. Již víte jak n:atributy fungují.
        Pokud k atributu připojíte předponu tag-, funkcionalita se aplikuje pouze na HTML tag, ne na jeho obsah.
        Toto nám umožňuje udělat ze jména komentátora odkaz pouze v případě, že poskytl svůj e-mail.
@@ -109,7 +171,17 @@
     {foreach $comments as $comment}
             <p class="mb-0">  <b><a href="mailto:{$comment->email}" n:tag-if="$comment->email">
                     {$comment->name}
-                </a></b>:</p>
+                </a></b>: <br>
+                {for $i=0; $i < $comment->rating; $i++}
+                    <div class="rating d-inline">
+                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" style="fill: #ff613a; stroke: #ff613a;">
+                    <path d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z"
+                          pathLength="360">
+                    </path>
+                </svg>
+    </div>
+                {/for}
+            </p>
        <small> {$comment->created_at|date:'F j, Y'}</small>
             <p> {$comment->content}</p>
     {/foreach}
