--- a/app/Module/Admin/Presenters/templates/@layout.latte
+++ b/app/Module/Admin/Presenters/templates/@layout.latte
@@ -7,9 +7,19 @@
 
 	<meta name="description" content="{if $context === 'category' && isset($category->description)}{$category->description|stripHtml}{elseif $context === 'subcategory' && isset($subcategory->description)}{$subcategory->description|stripHtml}{elseif $context === 'post' && isset($post->meta_description)}{$post->meta_description|stripHtml}{else}Welcome to our Cooking Guide - explore delicious recipes and cooking tips! {/if}"/>
 	{* Podminky pro zobrazeni dynamickych titulku. Pomohl Chatgpt*}
-	<title>{if $context === 'category' && isset($category->category_title)}{$category->category_title|stripHtml} Recipes{elseif $context === 'subcategory' && isset($subcategory->subcategory_title)}{$subcategory->subcategory_title|stripHtml} Recipes{elseif $context === 'post' && isset($post->title)}{$post->title|stripHtml} | Recipe {else} Cooking Guide | Recipes reviews & rating{/if}</title>
-{* vyřešit jak dat promenny do toho javascriptu, aby phpstorm nebrečel*}
-	{if $context === 'recipe'}
+<title>
+			{if $context === 'category' && isset($category->category_title)}
+				{$category->category_title|stripHtml} Recipes
+			{elseif $context === 'subcategory' && isset($subcategory->subcategory_title)}
+				{$subcategory->subcategory_title|stripHtml} Recipes
+			{elseif $context === 'post' && isset($post->title)}
+				{$post->title|stripHtml} | Recipe
+			{else}
+				Cooking Guide | Recipes reviews & rating
+			{/if}
+</title>
+{* Pokud jsme v Post presenteru, použijem context2 jako pomocnou podmínku a generujeme Json pro Rich Snippets*}
+	{if isset($context2) && $context2 === 'recipe'}
 		<script type="application/ld+json">
         {$jsonLdData|noescape}
     </script>
@@ -169,6 +179,7 @@
 	<script src="https://unpkg.com/nette-forms@3/src/assets/netteForms.js"></script>
 	<script src="{$basePath}/assets/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
 	<script src="{$basePath}/assets/js/color-modes.js"></script>
+
 <script type='text/javascript'>
 	window.smartlook||(function(d) {
 		var o=smartlook=function(){ o.api.push(arguments)},h=d.getElementsByTagName('head')[0];
@@ -176,6 +187,26 @@
 		c.charset='utf-8';c.src='https://web-sdk.smartlook.com/recorder.js';h.appendChild(c);
 	})(document);
 	smartlook('init', '0ba1d0837d1e077ca7c9cb1ffebe98f99ac616b1', { region: 'eu' });
+</script>
+
+<script>
+	document.getElementById('demo-form').addEventListener('focusin', function() {
+		if (!document.getElementById('recaptcha-script')) {
+			var recaptchaScript = document.createElement('script');
+			recaptchaScript.src = 'https://www.google.com/recaptcha/api.js';
+			recaptchaScript.id = 'recaptcha-script';
+			recaptchaScript.async = true;
+			recaptchaScript.defer = true;
+			document.body.appendChild(recaptchaScript);
+
+			// Přidání reCAPTCHA widgetu do formuláře
+			recaptchaScript.onload = function() {
+				grecaptcha.render('recaptcha-container', {
+					'sitekey': '6Lej0-ApAAAAAGSV_Bi1svLiZuHfFaSHLr8YOvjK'
+				});
+			};
+		}
+	}, { once: true }); // Event listener se spustí jen jednou
 </script>
 {/block}
 </body>
