V mysql vytvořena tabulka cuisines s unikátním klíčem ve sloupci cuisine_seotitle, aby nebyly duplicity v URL. V DashboardPresenteru vytvořen formulář adminForm,který čte od uživatele cuisine_title a cuisine_description. Položka cuisine_seotitle se dopočítá funkcí webalize titulku, a pokud je unikátní, uloží se do mysql. Test uložení OK

--- a/app/Module/Admin/Presenters/templates/Dashboard/default.latte
+++ b/app/Module/Admin/Presenters/templates/Dashboard/default.latte
@@ -1,9 +1,10 @@
 {block content}
-<h1>Administation</h1>
+<h1>Administration</h1>
     {if $user->isLoggedIn()}
         <a n:href="Dashboard:create">Write new post</a>
     {/if}
 <p>If you see this page, it means you have successfully logged in.</p>
+    {include "../@form.latte", name: adminForm}
 
 
 <p>(<a n:href="Sign:out">Sign out</a>)</p>
