--- a/app/Module/Admin/Presenters/templates/Homepage/default.latte
+++ b/app/Module/Admin/Presenters/templates/Homepage/default.latte
@@ -3,7 +3,7 @@
 {if $user->isLoggedIn()}
     <a n:href="Dashboard:create">Write new post</a>
 {/if}
-<p>Kočky's Cook Book</p>
+<p>Kočky's Cook Book. Insert your recipe for rating, and rate the others as well!</p>
 
 <div class="album py-5 bg-body-tertiary">
 
