test gitu bez změny v kodu

--- a/app/Module/Admin/Presenters/templates/@layout.latte
+++ b/app/Module/Admin/Presenters/templates/@layout.latte
@@ -172,7 +172,7 @@
 		<p class="float-end mb-1">
 			<a href="#">Back to top</a>
 		</p>
-		<p class="mb-1"> &copy; 2024 recipes.krsik.com,  All rights reserved. Created by Mallcom.</p>
+		<p class="mb-1"> &copy; 2024 recipes.krsik.com   All rights reserved. Created by Mallcom.</p>
 
 	</div>
 </footer>
