V PostFacade pridana funkce getCuisineTitleByCuisineID pro načtění názvu kuchyně - cuisine_title  z tabulky cuisines pomocí cuisineID z tabulky post. V postPresenteru načteno cuisine_title do šablony, následně vypsané do Jsonu pro Rich Snippets. V Post Show.latte název kuchyně také vypsán (v detailu receptu). Test Rich Snippets cuisines OK.

--- a/app/Module/Admin/Presenters/templates/Post/show.latte
+++ b/app/Module/Admin/Presenters/templates/Post/show.latte
@@ -15,6 +15,8 @@
         <br>
   <a href="/recipes/{$post->category_seotitle}">{$post->category_seotitle}</a> →
    <a href="/recipes/{$post->category_seotitle}/{$post->subcategory_seotitle}">{$post->subcategory_seotitle}</a>
+   <br>
+        {$cuisine_title} cuisine
          {if isset($averageRating) && isset($totalRatings)}
         <div class="average d-inline-flex gap-3">
 
